swim_common/src/form/tests/derive/form/incorrect_tag_type.stderr
error: Expecting string argument
  --> $DIR/incorrect_tag_type.rs:19:18
   |
19 |     #[form(tag = 13)]
   |                  ^^
